# AlgoPulse

./: CMakeLists.txt  README.md  research.md
docs/: theory.md
src/: DataIngestion.cpp  DataIngestion.h  HFTBot.cpp  HFTBot.h  Publisher.cpp  main.cpp
